--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.location"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -32,8 +32,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //For get current location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //Run time permissions
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
 
 }
